--- a/Section_1_test_notebook.ipynb
+++ b/Section_1_test_notebook.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "66b5106b-9684-469c-908e-0fd4ea7b5ab9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
-     ]
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "print('hello world')"
    ]
